--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <section id="about" class="section">
   <div class="container">
     <h3>About Me</h3>
-    <p>I am a Diploma student in Computer Engineering passionate about Full Stack Web Development.</p>
+    <p>I am a dedicated Diploma student in Computer Engineering with a strong passion for Full Stack Web Development. I enjoy building modern, responsive, and user-friendly web applications. Constantly learning and experimenting with new technologies, I aim to create efficient and elegant solutions that combine both functionality and design.</p>
 
     <img src="about.png" class="about-img">
 
